<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grabaciones</string>
    <string name="action_contact">Contact</string>
    <string name="action_settings">Settings</string>
	<string name="soundstest">Grabaciones</string>
	<string name="name_bar1">Volume</string>
	<string name="name_bar2">Balance</string>
	<string name="name_bar3">Speed</string>
	<string name="silenciar">Silenciar</string>
	<string name="imagen_ejemplo">Imagen1</string>
	<string name="menu_settings">Ajustes</string>
	<string name="menu_guardar">Guardar</string>
	<string name="menu_nuevo">Nuevo</string>
	<string name="tab_1">Hola</string>
	<string name="tab_2">Lola</string>
	<string name="acercade">Desarrollada por Sifilitico.</string>

	<!-- Sonidos -->
	<string name="sound11">O la de guapamente</string>
	<string name="sound12">Enviar yo cosas</string>
	<string name="sound13">Casi la cago</string>
	<string name="sound14">!Que chaval¡</string>
	<string name="sound15">!Graba, graba¡</string>
	<string name="sound16">Topota madre</string>
	<string name="sound17">La táctica española</string>
	<string name="sound18">¡Ay, quijodeputa!</string>
	<string name="sound19">Cocidito madrileño</string>
	<string name="sound110">Di pepino</string>
	<string name="sound111">¡Eres un gracioso!</string>
	<string name="sound112">Hijodeputa</string>
	<string name="sound113">Hortense: Significado</string>
	<string name="sound114">Lineas</string>
	<string name="sound115">¿Quieres una plaga?</string>

	<string name="sound21">¡¡¡Las 5:30!!!</string>
	<string name="sound22">Himnos variados</string>
	<string name="sound23">¡Viva España!</string>
	<string name="sound24">Himno del Madrid</string>
	<string name="sound25">Himno Gisbertiano</string>
	<string name="sound26">Creo que estoy ido</string>
	
	<string name="sound31">O la de guapamente</string>
	<string name="sound32">Enviar yo cosas</string>
	<string name="sound33">Casi la cago</string>
	<string name="sound34">!Que chaval¡</string>
	<string name="sound35">!Graba, graba¡</string>
	<string name="sound36">Topota madre</string>
	<string name="sound37">O la de guapamente</string>
	<string name="sound38">Enviar yo cosas</string>
	<string name="sound39">Casi la cago</string>
	<string name="sound310">!Que chaval¡</string>
	<string name="sound311">!Graba, graba¡</string>
	<string name="sound312">Topota madre</string>
	
	<string name="sound41">O la de guapamente</string>
	<string name="sound42">Enviar yo cosas</string>
	<string name="sound43">Casi la cago</string>
	<string name="sound44">!Que chaval¡</string>
	<string name="sound45">!Graba, graba¡</string>
	<string name="sound46">Topota madre</string>
	<string name="sound47">O la de guapamente</string>
	<string name="sound48">Enviar yo cosas</string>
	<string name="sound49">Casi la cago</string>
	<string name="sound410">!Que chaval¡</string>
	<string name="sound411">!Graba, graba¡</string>
	<string name="sound412">Topota madre</string>

</resources>