<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">


                <!-- Pestaña 1 -->
             

                    <!-- Contenido pestaña 1 -->

                    <ScrollView
                        android:id="@+id/scroll1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent" >

                        <LinearLayout
                            android:id="@+id/linearLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            tools:ignore="ScrollViewSize" >

                            <!-- <Button
                                android:id="@+id/button11"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/sound11" /> -->
                                
                                <!-- <ImageButton
                                android:id="@+id/button11"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                 android:text="@string/sound11" 
                                android:contentDescription="@string/sound11"
                                android:background="@drawable/toggle_button"/> -->
                                
                                 <Button
                                android:id="@+id/button11"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:text="@string/sound11"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" /> 

                            <Button
                                android:id="@+id/button12"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound12"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />

                            <Button
                                android:id="@+id/button13"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound13"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />

                            <Button
                                android:id="@+id/button14"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound14"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />

                            <Button
                                android:id="@+id/button15"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound15"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />

                            <Button
                                android:id="@+id/button16"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound16"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            
                            <Button
                                android:id="@+id/button17"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound17"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            
                            <Button
                                android:id="@+id/button18"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound18"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            
                            <Button
                                android:id="@+id/button19"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sound19"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            
                            <Button
                                android:id="@+id/button110"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound110"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            <Button
                                android:id="@+id/button111"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound111"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            <Button
                                android:id="@+id/button112"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound112"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            <Button
                                android:id="@+id/button113"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound113"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            <Button
                                android:id="@+id/button114"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound114"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />
                            <Button
                                android:id="@+id/button115"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="10"
                                android:text="@string/sound115"
                                android:textColor="#FFFFFFFF"
                                android:background="@drawable/toggle_button" />

                            
                           
                        </LinearLayout>
                    </ScrollView>

                    <!-- Fin contenido pestaña 1 -->
               
                <!-- FIN pestaña 1 -->

</LinearLayout>